# HackMT25

./: .gitignore  README.md  database.py  drizzle.config.ts  flake.nix  init_db.py  main.py  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_2
backend/: README.md  agent.ipynb  requirements.txt  twiliogpt.py
pyapi/: caregiver_app.db  config.py  database.py  init_db.py  main.py  models.py  pyproject.toml  requirements.txt  sql.db  test.db
pyapi/endpoints/: users.py
pyapi/routers/: caregivers.py  routes.py  users.py
pyapi/scheduler/: backgroundScheduler.py
pyapi/services/: test.py  twiliogpt.py
routers/: routes.py
scheduler/: test.py
services/: twiliogpt.py
src/app/: layout.tsx  page.tsx
src/app/dashboard/: layout.tsx  page.tsx
src/app/dashboard/hist/: page.tsx
src/app/dashboard/meds/: page.tsx
src/app/dashboard/schedule/: page.tsx
src/app/sign-in/: layout.tsx  page.tsx
src/app/sign-up/: layout.tsx  page.tsx
src/app/signin/: layout.tsx  page.tsx
src/server/db/: schema.ts
