[project]
name = "pyapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Felopater-Melika",email = "felopatermelika@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "databases (>=0.9.0,<0.10.0)",
    "requests (>=2.32.3,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "twilio (>=9.4.4,<10.0.0)",
    "azure-cognitiveservices-speech (>=1.42.0,<2.0.0)",
    "openai (>=1.61.0,<2.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
